# advent-of-code

./: .gitignore  README.md  pyproject.toml  setup_aoc.py
src/aoc/2025/day_01/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_02/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_03/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_04/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_05/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_06/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_07/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_08/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_09/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_10/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_11/: aoc_code.py  test_aoc_code.py
src/aoc/2025/day_12/: aoc_code.py  test_aoc_code.py
