[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jbeattie5768", email = "jbeattie5768@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "advent-of-code-data>=2.1.0",
]

[project.scripts]
aoc = "aoc:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy",
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = ["--import-mode=importlib",]
